tests/fail/expr/nightly/methodcall.rs
fn main() {
    one_assert::assert!("".to_string().len());
    one_assert::assert!(1.len());
}
